--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
   <p>Two emails are shown below. Click the one you believe is the phishing attempt.</p>
 </header>
 <main>
-  <div class="card" id="leftCard"><img src="left.png" alt="Email A"></div>
-  <div class="card" id="rightCard"><img src="right.png" alt="Email B"></div>
+  <div class="card" id="leftCard"><img src="" alt="Email A"></div>
+  <div class="card" id="rightCard"><img src="" alt="Email B"></div>
 </main>
 <div class="feedback" id="feedback"></div>
 <div style="text-align:center;"><button id="reset" style="display:none;">Play Again</button></div>
